# celestial-sphere-sim

./: .gitignore
lines/: instanced.vert  ksnumbers.h  lines.pro  main.cpp  main.qml  skypoint.cpp
spheres/: instanced.frag  main.cpp  main.qml
src/: CMakeLists.txt  celestial_sphere.pro  computeframegraph.cpp  computeframegraph.h  computematerial.cpp  computematerial.h  customwindow.cpp  customwindow.h  instanced.vert  instancedScene.cpp  ksnumbers.cpp  linegeometry.cpp  linegeometry.h  linematerial.cpp  linematerial.h  main.cpp  main.qml  projectionskybox.cpp  projectionskybox.h  qt3dwidget.cpp  qt3dwidget.h  skypoint.h  typedef.h
src/shaders/: instanced.frag  instanced.vert  lines.frag  lines.vert  projector.frag  projector.vert  projector_frag.glsl  projector_vert.glsl  skybox.vert
